--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -82,6 +82,8 @@ hr {
     padding: 30px 15px;
     background: #fff;
     background: rgba(255,255,255,0.9);
+    opacity: 0.6;
+    filter: alpha(opacity=60); /* defines opacity level for IE8 and earlier */
 }
 
 .intro-text {
