--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -77,6 +77,13 @@ hr {
     border-color: #999999;
 }
 
+.box1 {
+    margin-bottom: 20px;
+    padding: 30px 15px;
+    background: #fff;
+    background: rgba(255,255,255,0.9);
+}
+
 .box {
     margin-bottom: 20px;
     padding: 30px 15px;
