--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -89,7 +89,7 @@ hr {
     padding: 30px 15px;
     background: #fff;
     background: rgba(255,255,255,0.9);
-    opacity: 0.9;
+    /* opacity: 0.9;
     filter: alpha(opacity=90); /* defines opacity level for IE8 and earlier */
 }
 
